--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,16 @@
         android:id="@+id/button3"
         android:layout_width="132dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="36dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="8dp"
         android:background="@android:color/holo_blue_dark"
-        android:text="FLIP"
+        android:text="FL"
+        android:textAlignment="viewEnd"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewText"
+        app:layout_constraintVertical_bias="0.615"
         tools:ignore="HardcodedText" />
 
     <ImageView
@@ -41,7 +43,7 @@
         android:id="@+id/viewText"
         android:layout_width="164dp"
         android:layout_height="44dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="104dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:ems="10"
@@ -49,9 +51,28 @@
         android:textAlignment="center"
         android:textColor="@android:color/darker_gray"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="TextViewEdits" />
+        tools:ignore="MissingConstraints,TextViewEdits" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="132dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/holo_blue_dark"
+
+        android:text="IP"
+        android:textAlignment="viewStart"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintTop_toBottomOf="@+id/viewText"
+        app:layout_constraintVertical_bias="0.47"
+        tools:ignore="HardcodedText" />
 
 </android.support.constraint.ConstraintLayout>
